# flecs-webgpu-engine

./: .gitignore  CMakeLists.txt  LICENSE  README.md  build-web.sh  demo-project.json  flecs_systems_webgpu.c  flecs_systems_webgpu.h  minimal-test.c  minimal-test.json  project.json  web-project.json
docs/: ARCHITECTURE.md  BUILD.md  RESEARCH.md  ROADMAP.md  SUMMARY.md  WEBGPU.md
include/: flecs_systems_webgpu.h
include/flecs-systems-webgpu/: bake_config.h
include/flecs_webgpu_demo/: bake_config.h
shaders/: basic.wgsl
src/: main.c  private_api.h
src/geometry/: geometry.c
src/math/: math_utils.c
src/rendering/: render_system.c
src/resources/: resource_manager.c
src/shaders/: shader_sources.c
src/webgpu/: dawn_impl.c  webgpu_constants.h
test/: test_compile.c
web-demo/: README.md  debug-test.html  flecs-native.html  flecs-wasm-integration.js  flecs-webgpu-demo.js  flecs_webgpu_demo.js  index.html  run-demo.sh  serve.py
web-demo/wasm/: flecs_webgpu_demo.js
